# ai-assistant-2

./: .gitignore  Makefile  README.md  TODO.md  Todo.md  config.example.yaml  package.json  pyproject.toml
backend/: README.md  ai-assistant-backend.spec  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/docs/: ApplicationExtension.md  Initialization.md
backend/prisma/: schema.prisma
backend/prisma/migrations/20260223221849_init/: migration.sql
backend/prisma/migrations/20260224030045_add_agents/: migration.sql
backend/prisma/migrations/20260224172840_add_auto_load/: migration.sql
backend/prisma/migrations/20260227160922_add_agent_engine_and_checkpoints/: migration.sql
backend/prisma/migrations/20260228120000_add_memory_fts/: migration.sql
backend/prisma/migrations/20260302225848_add_tool_management/: migration.sql
backend/prisma/migrations/20260302231751_add_tool_management/: migration.sql
backend/prisma/migrations/20260307031930_add_thread_metadata/: migration.sql
backend/prisma/migrations/20260312020301_add_evals/: migration.sql
backend/prisma/migrations/20260312161134_create_eval_links/: migration.sql
backend/prisma/migrations/20260313235950_add_eval_metadata/: migration.sql
backend/prisma/migrations/20260315161608_add_reflection_fields/: migration.sql
backend/public/: index.html
backend/src/: app.ts  index.ts  main.py  server.py
backend/src/agents/: agents.py
backend/src/config/: README.md  __init__.py  loader.py  manager.py
backend/src/config/models/: __init__.py  base.py  cors.py  credentials.py  database.py  llm.py  logging.py  notifications.py  schedules.py  server.py  tools.py
backend/src/controllers/: __init__.py  index.ts  static.ts
backend/src/dao/: activities.py  agents.py  summaries.py  threads.py
backend/src/database/: __init__.py  migrations.py
backend/src/lib/: config.ts  database.ts  health.ts  logger.ts  shutdown.ts
backend/src/llm/: __init__.py  base.py  context_window_manager.py  factory.py  ollama.py
backend/src/logging/: __init__.py  fallback.py  formatters.py  handlers.py  manager.py  middleware.py  otel_utils.py
backend/src/middleware/: error.middleware.ts  http.middleware.ts  zod.middleware.ts
backend/src/models/: __init__.py  activity_model.py  agent_model.py  automation_model.py  base_model.py  graph.py  prompt_base.py  skill_model.py  thread_summaries.py
backend/src/static/: 404.html  agent.html  index.css  index.html  settings.html  team.html
backend/src/utils/: formatting.py
backend/tests/config/: __init__.py
backend/tests/controllers/: __init__.py  test_agents.py  test_chat.py
backend/tests/llm/: __init__.py  test_ollama.py
backend/tests/logging/: __init__.py  test_fallback.py  test_formatters.py  test_handlers.py  test_manager.py  test_middleware.py
frontend/: index.html  (+3 more)
(+187 files in other folders)
